# argus-pep-api-c

./: .cproject  .gitignore  .project  AUTHORS  CHANGELOG  COPYING  ChangeLog  DEPENDENCIES  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autotools.sh  configure  configure.ac  index.html  libargus-pep-api.pc.in  libargus-pep.pc.in  libpep-c.pc.in  params.json  pom.xml
debian/: changelog  control  copyright  libargus-pep-dev.dirs  libargus-pep-dev.docs  libargus-pep2.install  rules
debian/patches/: series.disabled
debs/: argus-pep-api-c_2.2.0-1.dsc  argus-pep-api-c_2.3.0-1.dsc  index.html  libargus-pep-dev_2.3.0-1_amd64.deb  libargus-pep2_2.3.0-1_amd64.deb
distrib/: index.html
doc/: Doxyfile  annotated.html  classes.html  deprecated.html  dir_8c3ae931d2ce8c7c5acb10e73ed5a487.html  error_8h.html  error_8h_source.html  examples.html  files.html  functions.html  functions_vars.html  globals.html  globals_0x67.html  globals_0x6f.html  globals_0x70.html  globals_0x78.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  group___authz_interop.html  group___common_auth_z.html  group___error.html  group___grid_w_n_auth_z.html  group___logging.html  group___obligation_handler.html  group___p_e_p_client.html  group___p_i_p.html  group___profiles.html  group___profiles_adapters.html  group___x_a_c_m_l.html  index.html  modules.html  oh_8h.html  oh_8h_source.html  pages.html  pep_8h.html  pep_8h_source.html  (+10 more)
doc/html/: README  index.html
fedora/: argus-pep-api-c.el6.spec  argus-pep-api-c.el6.spec.in  argus-pep-api-c.spec  argus-pep-api-c.spec.in
project/: argus-pep-api-c.spec  changelog
project/debian/: argus-pep-api-c-dev.examples  argus-pep-api-c-dev.install  argus-pep-api-c.install  changelog  control  copyright
project/debian/patches/: fix-docdir.patch
rpms/: argus-pep-api-c-2.2.0-1.el5.src.rpm  argus-pep-api-c-2.2.0-1.el6.src.rpm  argus-pep-api-c-2.3.0-1.el5.src.rpm  argus-pep-api-c-2.3.0-1.el5.x86_64.rpm  argus-pep-api-c-2.3.0-1.el6.src.rpm  argus-pep-api-c-2.3.0-1.el6.x86_64.rpm  argus-pep-api-c-devel-2.3.0-1.el5.x86_64.rpm  argus-pep-api-c-devel-2.3.0-1.el6.x86_64.rpm  index.html
src/: Makefile.am  Makefile.in  config.h.in  libargus_pep.c  libpep-c.c
src/argus/: Makefile.am  Makefile.in  action.c  attribute.c  attributeassignment.c  environment.c  error.c  error.h  io.c  io.h  obligation.c  oh.h  pep.c  pep.h  pip.h  profiles.c  profiles.h  request.c  resource.c  response.c  result.c  status.c  subject.c  xacml.h
src/cli/: Makefile.am  log.c  main.c  pepcli.1
src/example/: README  pep_client_example.c  threaded_pep_client_example.c
src/hessian/: Makefile.am  Makefile.in  binary.c  boolean.c  date.c  double.c  hessian.c  hessian.h  i_hessian.h  integer.c  list.c  long.c  map.c  null.c  ref.c  remote.c  string.c  types.h  xml.c
src/pep/: Makefile.am  action.c  attribute.c  attributeassignment.c  environment.c  error.c  error.h  i_error.h  io.c  io.h  model.h  obligation.c  oh.h  pep.c  pep.h  pip.h  profiles.c  profiles.h  request.c  resource.c  response.c  result.c  status.c  subject.c  xacml.h
src/pkgconfig/: argus_pep.pc
src/util/: Makefile.am  Makefile.in  base64.c  base64.h  buffer.c  buffer.h  linkedlist.c  linkedlist.h  log.c  log.h
test/: Makefile  test_pep.c
test/hessian/: Makefile  test_hessian.c
