#
# $Id: Makefile.am,v 1.4 2009/01/29 16:19:58 vtschopp Exp $
#

include $(top_srcdir)/Makefile.flags.am 

noinst_LTLIBRARIES = libhessian.la

libhessian_la_SOURCES = \
binary.c \
boolean.c \
double.c \
hessian.c \
hessian.h \
integer.c \
list.c \
long.c \
map.c \
null.c \
remote.c \
string.c \
types.h \
xml.c
