#
# $Id: Makefile.am,v 1.5 2009/03/19 14:27:44 vtschopp Exp $
#

include $(top_srcdir)/Makefile.flags.am 

#
# library to build
#
noinst_LTLIBRARIES = libpep.la

# sources not distributed
libpep_la_SOURCES = \
action.c \
attribute.c \
attributeassignment.c \
environment.c \
error.c \
error.h \
io.c \
io.h \
obligation.c \
pep.c \
pep.h \
request.c \
resource.c \
response.c \
result.c \
status.c \
subject.c \
xacml.h

