#
# $Id: Makefile.am,v 1.6 2009/03/25 12:47:43 vtschopp Exp $
#

#
# library to build
#
noinst_LTLIBRARIES = libpep.la

# sources not distributed
libpep_la_SOURCES = \
action.c \
attribute.c \
attributeassignment.c \
environment.c \
error.c \
error.h \
io.c \
io.h \
obligation.c \
pep.c \
pep.h \
request.c \
resource.c \
response.c \
result.c \
status.c \
subject.c \
xacml.h

