#
# $Id: Makefile.am,v 1.3 2009/01/29 12:31:10 vtschopp Exp $
#

include $(top_srcdir)/Makefile.flags.am 

noinst_LTLIBRARIES = libutil.la

libutil_la_SOURCES = \
base64.c \
base64.h \
buffer.c \
buffer.h \
linkedlist.c \
linkedlist.h \
log.c \
log.h


#
# headers files
#
#includedir=$(prefix)/include/pep
#include_HEADERS = log.h


